# gtkdemos

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md
GTK3/: README.md
GTK3/ada/helloworld/: .gitignore  button_click.adb  helloworld.gpr  main.adb
GTK3/c/helloworld/: helloworld.c  meson.build
GTK3/erlang/helloworld/: helloworld.erl
GTK3/guile/helloworld/: helloworld.scm
GTK3/js/helloworld/: helloworld.js
GTK3/julia/helloworld/: .gitignore  HelloworldGtk.jl  Project.toml
GTK3/nim/helloworld/: .gitignore  helloworld.nim  helloworld.nimble
GTK3/ocaml/helloworld/: dune  dune-project  helloworld.ml
GTK3/perl/helloworld/: helloworld.pl
GTK3/prolog/helloworld/: helloworld.pl
GTK3/racket/helloworld/: .gitignore
GTK3/ruby/helloworld/: helloworld.rb
GTK3/rust/helloworld/src/: main.rs
GTK4/: README.md
ada/helloworld/: button_click.ads  main.adb
c/helloworld/: CMakeLists.txt  helloworld.c  meson.build
erlang/helloworld/: .gitignore
guile/helloworld/: helloworld.scm
haskell/helloworld/: .gitignore  Main.hs  helloworld.cabal
js/helloworld/: helloworld.js
julia/helloworld/: helloworld.jl
lua/helloworld/: helloworld.lua
nim/helloworld/: helloworld.nim
python/helloworld/: helloworld.py
racket/helloworld/: helloworld.rkt
rust/helloworld/: Cargo.toml
rust/helloworld/src/: main.rs
sh/helloworld/: helloworld.sh
vala/helloworld/: helloworld.vala
