cmake_minimum_required(VERSION 2.4)

project(helloworld)


FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})


ADD_EXECUTABLE(helloworld helloworld.c)
TARGET_LINK_LIBRARIES(helloworld ${GTK3_LIBRARIES})
