cabal-version:
    >=1.10
name:
    helloworld
version:
    0.0.0
license:
    CC0-1.0
author:
    Maciej Barć
maintainer:
    xgqt@riseup.net
build-type:
    Simple

executable helloworld
  main-is:
    Main.hs
  default-language:
    Haskell2010
  build-depends:
    base >=4.14 && <4.15,
    haskell-gi-base,
    gi-gtk == 3.0.*
